# datafusion-distributed

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  snapshot.yml  sync-promote-branch.yml  sync-upstream-rebase.yml
benchmarks/: Cargo.toml
benchmarks/cdk/: package-lock.json  package.json  requirements.txt
benchmarks/cdk/ballista/src/: ballista_http.rs
benchmarks/cdk/lib/: ballista.ts  cdk-stack.ts
benchmarks/src/: lib.rs  results.rs  run.rs  stats.rs
benchmarks/src/datasets/: common.rs  tpcds.rs  tpch.rs
benchmarks/tests/: clickbench_correctness_test.rs  clickbench_plans_test.rs  stateful_data_cleanup.rs  tpcds_correctness_test.rs  tpcds_plans_test.rs  tpch_correctness_test.rs  tpch_plans_test.rs
cli/: Cargo.toml
cli/src/: main.rs
console/: Cargo.toml
console/src/: main.rs  worker.rs
docs/source/: index.rst
docs/source/advanced/: 07-worker-versioning.md  08-adaptive-query-execution.md
docs/source/contributor-guide/: cooperative-drain.md  tests.md
docs/source/learn/: 01-concepts.md  03-how-adaptive-query-execution-works.md
docs/source/user-guide/: 06-channel-resolver.md  cooperative-drain.md
examples/: custom_distributed_partial_reduction_tree.md  custom_execution_plan.rs  custom_worker_url_routing.md  custom_worker_url_routing.rs  in_memory_cluster.rs  localhost_versioned_run.rs  work_unit_feed.md  work_unit_feed.rs
scripts/: sync-upstream.sh
src/: config_extension_ext.rs  dispatch_plan_source.rs  distributed_ext.rs  lib.rs  multi_channel_frame.rs  passthrough_headers.rs  stage.rs  worker_resolver.rs
src/codec/: distributed_codec.rs  mod.rs  user_codec.rs
src/common/: cancellation.rs  children_helpers.rs  mod.rs  recursion.rs  time.rs  uuid.rs  vec.rs
src/coordinator/: dispatch_metrics.rs  distributed.rs  latency_metric.rs  metrics_store.rs  mod.rs  plan_encoding.rs  prepare_dynamic_plan.rs  prepare_static_plan.rs  query_coordinator.rs  task_spawner.rs
src/distributed_planner/: .inject_network_boundaries.rs.pending-snap  boundary_factory.rs  distribute_plan.rs  distributed_config.rs  distributed_query_planner.rs  inject_network_boundaries.rs  insert_broadcast.rs  mod.rs  network_boundary.rs  normalize_collect_joins.rs  partial_reduce_below_network_shuffles.rs  plan_annotator.rs  prepare_network_boundaries.rs  session_state_builder_ext.rs  task_estimator.rs  validate_stages.rs  worker_fragments.rs
src/distributed_planner/snapshots/: datafusion_distributed__distributed_planner__normalize_collect_joins__tests__left_hash_join_converted_to_partitioned.snap  datafusion_distributed__distributed_planner__normalize_collect_joins__tests__nested_loop_left_join_swapped.snap
src/distributed_planner/statistics/: complexity_cpu.rs  complexity_memory.rs  plan_statistics.rs
src/embedded/: dsm.rs  in_process.rs  mesh.rs  mod.rs  mpsc_ring.rs  runtime.rs  self_hosted.rs  setup.rs  transport.rs
src/execution_plans/: children_isolator_union.rs  common.rs  distributed.rs  distributed_leaf.rs  metrics.rs  mod.rs  network_broadcast.rs  network_coalesce.rs  network_shuffle.rs  sampler.rs
src/execution_plans/benchmarks/: fixture.rs  mod.rs  shuffle_bench.rs  transport_bench.rs
src/metrics/: bytes_metric.rs  latency_metric.rs  max_gauge_metric.rs  mod.rs  proto.rs  task_metrics_collector.rs  task_metrics_rewriter.rs
src/networking/: channel_resolver.rs  mod.rs  worker_transport.rs
src/observability/: mod.rs
src/protobuf/: distributed_codec.rs  mod.rs
src/protocol/: channel_resolver.rs  in_process.rs  metrics_proto.rs  mod.rs  worker_channel.rs
src/protocol/grpc/: channel_resolver.rs  metrics_proto.rs  mod.rs  on_drop_stream.rs  spawn_select_all.rs  worker.proto  worker_client.rs  worker_service.rs
src/protocol/grpc/errors/: arrow_error.rs  datafusion_error.rs  io_error.rs  mod.rs  objectstore_error.rs  parquet_error.rs  parser_error.rs  schema_error.rs
src/protocol/grpc/observability/: README.md  mod.rs  service.rs
src/protocol/grpc/observability/proto/: observability.proto
src/shm/: dsm.rs  in_process.rs  mesh.rs  mod.rs  mpsc_ring.rs  plan_codec.rs  runtime.rs  self_hosted.rs  setup.rs  sink.rs  transport.rs
src/test_utils/: in_memory_channel_resolver.rs  in_memory_worker_resolver.rs  insta.rs  localhost.rs  metrics.rs  mod.rs  plans.rs  routing.rs  test_work_unit_feed.rs  work_unit_file_scan.rs
src/work_unit_feed/: coordinator.rs  mod.rs  remote_work_unit_feed.rs  work_unit_feed.rs  work_unit_feed_provider.rs  work_unit_feed_registry.rs
src/worker/: flight.rs  impl_coordinator_channel.rs  impl_execute_task.rs  impl_set_plan.rs  in_memory.rs  mod.rs  session_builder.rs  single_write_multi_read.rs  task_data.rs  transport.rs  worker.proto  worker_connection_pool.rs  worker_service.rs
src/worker/flight/: mod.rs
src/worker/test_utils/: mod.rs  worker_handles.rs
tests/: clickbench_correctness_test.rs  clickbench_plans_test.rs  custom_config_extension.rs  custom_extension_codec.rs  distributed_aggregation.rs  distributed_unions.rs  empty_columns_between_workers.rs  error_propagation.rs  extension_points.rs  in_process_no_resolver_or_codec.rs  introspection.rs  join.rs  metrics_collection.rs  multi_task_collect_join_repros.rs  passthrough_headers.rs  stateful_data_cleanup.rs  stateful_execution_plan.rs  task_estimator_test.rs  tpcds_correctness_test.rs  tpcds_plans_test.rs  tpch_correctness_test.rs  tpch_plans_test.rs  udfs.rs  work_unit_feed.rs  worker_plan_hook.rs
