[workspace]
members = ["benchmarks", "cli", "console"]

[workspace.dependencies]
datafusion = { git = "https://github.com/apache/datafusion", rev = "63e25c15bc72e731c174ba03d1143b243cc1aaae", default-features = false }
datafusion-proto = { git = "https://github.com/apache/datafusion", rev = "63e25c15bc72e731c174ba03d1143b243cc1aaae" }

[package]
name = "datafusion-distributed"
version = "2.0.0"
edition = "2024"
description = "Framework for enhancing Apache DataFusion with distributed capabilities"
license = "Apache-2.0"
documentation = "https://datafusion-contrib.github.io/datafusion-distributed/"
repository = "https://github.com/datafusion-contrib/datafusion-distributed"

[dependencies]
chrono = { version = "0.4.45" }
datafusion = { workspace = true, features = [
  "parquet",
  "sql",
  "unicode_expressions",
  "datetime_expressions",
] }
datafusion-proto = { workspace = true }
arrow-flight = { version = "59", optional = true }
arrow-select = "59"
arrow-ipc = { version = "59", features = ["zstd"] }
async-trait = "0.1.89"
async-stream = "0.3"
log = "0.4"
tokio = { version = "1.48", features = ["full"] }
tonic = { version = "0.14.1", features = ["transport"], optional = true }
tower = { version = "0.5.2", optional = true }
http = "1.3.1"
itertools = "0.14.0"
futures = "0.3.31"
url = "2.5.7"
uuid = "1.19"
delegate = "0.13.4"
dashmap = "6.0.1"
prost = "0.14.1"
rand = "0.9"
object_store = "0.13"
bytes = "1.11"
pin-project = "1.1.10"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7"
moka = { version = "0.12", features = ["sync", "future"] }
crossbeam-queue = "0.3"
sysinfo = { version = "0.30", optional = true }
sketches-ddsketch = { version = "0.3", features = ["use_serde"] }
bincode = "1"
tonic-prost = { version = "0.14.2", optional = true }

# integration_tests deps
insta = { version = "1.46.0", features = ["filters"], optional = true }
parquet = { version = "59", optional = true }
arrow = { version = "59", optional = true, features = ["test_utils"] }
hyper-util = { version = "0.1.16", optional = true }

[features]
default = ["flight"]
# Arrow Flight gRPC transport. When off, the crate builds with no `tonic` / `arrow-flight`
# and the in-memory transport becomes the default: distributed plans run inside the current
# process. Multi-process execution then needs an embedder-registered transport.
flight = ["dep:arrow-flight", "dep:tonic", "dep:tonic-prost", "dep:tower"]
avro = ["datafusion/avro"]
# Independent from `flight` so the integration suite runs against both the gRPC transport
# (`--features integration`) and the in-memory one (`--no-default-features --features
# integration`). The Flight-specific tests gate themselves on `flight`.
integration = ["insta", "parquet", "arrow", "hyper-util"]

system-metrics = ["sysinfo"]

sysinfo = ["dep:sysinfo"]

[dev-dependencies]
structopt = "0.3"
insta = { version = "1.46.0", features = ["filters"] }
parquet = "59"
arrow = { version = "59", features = ["test_utils"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hyper-util = "0.1.16"
pretty_assertions = "1.4"
test-case = "3.3.1"

[workspace.lints.clippy]
disallowed_types = "deny"
disallowed-methods = "deny"

[[example]]
name = "custom_execution_plan"
required-features = ["integration"]

[[example]]
name = "custom_distributed_partial_reduction_tree"
required-features = ["integration"]

[[example]]
name = "custom_worker_url_routing"
required-features = ["integration"]

[[example]]
name = "work_unit_feed"
required-features = ["integration"]


