[package]
name = "datafusion-distributed-benchmarks"
version = "0.1.0"
edition = "2024"
default-run = "dfbench"

[dependencies]
datafusion = { workspace = true }
datafusion-distributed = { path = "..", features = [
  "integration",
  "system-metrics",
] }
tokio = { version = "1.48", features = ["full"] }
parquet = { version = "58" }
structopt = { version = "0.3.26" }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.141"
env_logger = "0.11.8"
async-trait = "0.1.89"
futures = "0.3.31"
url = "2.5.7"
arrow = { version = "58", features = ["test_utils"] }
tonic = { version = "0.14.1", features = ["transport"] }
tpchgen = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "438e9c2dbc25b2fff82c0efc08b3f13b5707874f" }
tpchgen-arrow = { git = "https://github.com/clflushopt/tpchgen-rs", rev = "438e9c2dbc25b2fff82c0efc08b3f13b5707874f" }
reqwest = "0.12"
zip = "6.0"
axum = "0.7"
object_store = { version = "0.13", features = ["aws"] }
aws-config = "1"
aws-sdk-ec2 = "1"
openssl = { version = "0.10", features = ["vendored"] } # Keep this. Necessary for the remote benchmarks worker.
mimalloc = "0.1"
sketches-ddsketch = "0.3"

[features]
# Gates for the dataset test suites under `tests/`. They live here rather than in the library
# because, as a dev-dependency of the library, this crate re-enables `grpc` on every test build
# through feature unification, which made the no-grpc config untestable.
tpch = []
tpcds = []
clickbench = []
slow-tests = []

[dev-dependencies]
criterion = "0.5"
sysinfo = "0.30"
pretty_assertions = "1.4"
test-case = "3.3.1"

[build-dependencies]
built = { version = "0.8", features = ["git2", "chrono"] }

[[bin]]
name = "dfbench"
path = "src/main.rs"

[[bin]]
name = "worker"
path = "cdk/bin/worker.rs"

[[bench]]
name = "broadcast_cache_scenarios"
harness = false

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "local_repartition"
harness = false

[[bench]]
name = "transport"
harness = false
