[package]
name = "datafusion-distributed-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = { workspace = true }
datafusion-distributed = { path = "..", features = ["avro", "integration"] }
datafusion-cli = { git = "https://github.com/gene-bordegaray/datafusion", branch = "gene.bordegaray/2026/06/range-partitioned-joins", default-features = false }
tokio = { version = "1.48", features = ["full"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
dirs = "6"

[[bin]]
name = "datafusion-distributed-cli"
path = "src/main.rs"
